--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.15.jar=D:\\SEPTIMO SEMESTRE\\ARQUITECTURA DE SOFTWARE\\mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=/Users/manuelandres/Documents/mysql-connector-java-5.1.40-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +42,7 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
